add authorization to exercise settings page (#242)